<resources>
    <string name="app_name">Manogotchi</string>
    <string name="title_activity_main">Manogotchi</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="energy_label">Energy</string>
    <string name="hunger_label">Hunger</string>
    <string name="fitness_label">Fitness</string>
    <string name="happiness_label">Happiness</string>
    <string name="test_button">Advance Time</string>
    <string name="timer">Timer</string>

    <string name="home_welcome_text">Welcome to Manogotchi! This a simple Android application developed by a few interns at the School of Computer Science to demonstrate basic programming concepts in the Java programming language as well as some Android specific features. Have fun!</string>
    <string name="reset">Reset</string>
    <string name="statistics_title">Statistics</string>
    <string name="food_title">Consumables</string>
    <string name="toggle_ai_on">AI</string>
    <string name="toggle_ai_off">Manual</string>
    <string name="toggle_timer_on">Timing On</string>
    <string name="toggle_timer_off">Timing Off</string>
</resources>
