<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fsm.manogotchi.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/energy_label"
            android:gravity="center"/>
        <com.jjoe64.graphview.GraphView
            android:id="@+id/energy_graph"
            android:layout_width="match_parent"
            android:layout_height="200dip" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hunger_label"
            android:gravity="center"/>
        <com.jjoe64.graphview.GraphView
            android:id="@+id/hunger_graph"
            android:layout_width="match_parent"
            android:layout_height="200dip" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fitness_label"
            android:gravity="center"/>
        <com.jjoe64.graphview.GraphView
            android:id="@+id/fitness_graph"
            android:layout_width="match_parent"
            android:layout_height="200dip" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/happiness_label"
            android:gravity="center"/>
        <com.jjoe64.graphview.GraphView
            android:id="@+id/happiness_graph"
            android:layout_width="match_parent"
            android:layout_height="200dip" />
    </LinearLayout>
</ScrollView>
