<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.fsm.manogotchi.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="3dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp">

            <ProgressBar
                android:id="@+id/energy_bar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="100" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/energy_bar"
                android:layout_alignLeft="@id/energy_bar"
                android:layout_alignRight="@id/energy_bar"
                android:layout_alignTop="@id/energy_bar"
                android:gravity="center"
                android:text="@string/energy_label" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp">

            <ProgressBar
                android:id="@+id/hunger_bar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="100" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/hunger_bar"
                android:layout_alignLeft="@id/hunger_bar"
                android:layout_alignRight="@id/hunger_bar"
                android:layout_alignTop="@id/hunger_bar"
                android:gravity="center"
                android:text="@string/hunger_label" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp">

            <ProgressBar
                android:id="@+id/fitness_bar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="100" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/fitness_bar"
                android:layout_alignLeft="@id/fitness_bar"
                android:layout_alignRight="@id/fitness_bar"
                android:layout_alignTop="@id/fitness_bar"
                android:gravity="center"
                android:text="@string/fitness_label" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp">

            <ProgressBar
                android:id="@+id/happiness_bar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="100" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/happiness_bar"
                android:layout_alignLeft="@id/happiness_bar"
                android:layout_alignRight="@id/happiness_bar"
                android:layout_alignTop="@id/happiness_bar"
                android:gravity="center"
                android:text="@string/happiness_label" />

        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="testBars"
            android:text="@string/test_button" />

        <ImageView
            android:id="@+id/android_figure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/default_android" />

    </LinearLayout>
    <View
        android:layout_width="@dimen/separator_width"
        android:layout_height="match_parent"
        android:background="@color/separator_colour"
        />
    <fragment
        android:name="com.example.fsm.manogotchi.TabContainerFragment"
        android:id="@+id/tab_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2" />

</LinearLayout>
